# Outpost

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  outpost.desktop
qml/: outpost.qml
qml/cover/: CoverPage.qml
qml/pages/: About.qml  AuthorizationCodeDialog.qml  Main.qml  PhoneNumberDialog.qml
qml/resources/: resources.qrc
rpm/: outpost.spec
src/: apiclient.cpp  apiclient.h  endpoints.h  outpost.cpp  parcellist.cpp  parcellist.h
translations/: outpost.ts
